resources/public/css/webol-help.css
._container, body {
  background-color:#F0D8B8;
  text-align:left;
  width: 130mm;
  margin:10mm;
  padding:0;
  font-family:sans-serif;
  font-size:11pt;
}

._centered, .centered {
    text-align:center;
}

._majorBig, h1 {
  font-size:1.6em;
}

._mediumBig, h2 {
  font-size:1.2em;
}

._minorBig, h3 {
  font-size:1.05em;
  text-decoration:underline;
}

._minorSmall, aside {
  font-size:.9em;
  font-style:italic;
}

address {
    font-size:0.6em;
}

._highlight, dfn {
    font-style:italic;
    color:#700000;
}

._indented, blockquote {
    margin-top:0.1em;
    margin-left:0.5em;
    margin-right:0.5em;
}

._embossed, kbd, blockquote {
  padding:0.1em;
  border-top: #777 2px solid;
  border-right: #777 2px solid;
  border-bottom: #ccc 2px solid;
  border-left: #ccc 2px solid;
}

._standout, .question, .warning {
  background-color:#FFB0B0;
  padding:0.5em;
  border-top: #ddd 3px solid;
  border-right: #ddd 3px solid;
  border-bottom: #977 2px solid;
  border-left: #977 2px solid;
}

